<?xml version="1.0"?>
<package>
  <name>resilient_planner</name>
  <version>0.0.0</version>
  <description>The resilient_planner package</description>

  <maintainer email="yuweiwu@seas.upenn.edu">Yuwei WU</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>occ_grid</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>decomp_ros_utils</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>occ_grid</run_depend>
  <run_depend>path_searching</run_depend>

</package>
